# mado

./: .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yaml  env.sample  notes.txt  pyproject.toml
.github/workflows/: docker-image.yml
back/: Dockerfile  compose.yaml  env.sample  pyproject.toml
back/src/: config.py  es_client.py  main.py
back/src/models/: object_card.py  object_set.py
front/mado_flutter/: README.md  pubspec.yaml
front/mado_flutter/android/app/: build.gradle
front/mado_flutter/android/app/src/main/: AndroidManifest.xml
front/mado_flutter/android/app/src/main/kotlin/com/example/mado_flutter/: MainActivity.kt
front/mado_flutter/ios/Runner/: Info.plist
front/mado_flutter/ios/Runner.xcodeproj/: project.pbxproj
front/mado_flutter/linux/: CMakeLists.txt  my_application.cc
front/mado_flutter/macos/Runner.xcodeproj/: project.pbxproj
front/mado_flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
front/mado_flutter/macos/Runner/Configs/: AppInfo.xcconfig
front/mado_flutter/web/: index.html  manifest.json
front/mado_flutter/windows/: CMakeLists.txt
front/mado_flutter/windows/runner/: Runner.rc  main.cpp
src/: config.py  main.py  schemas.py
src/models/: object_card.py  object_set.py
