[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Akenaide", email = "kevin.mansang@gmail.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "strawberry-graphql>=0.215.0",
    "uvicorn[standard]>=0.24.0.post1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

